testsuite/tests/linear/should_fail/LinearSeq.stderr

LinearSeq.hs:6:5: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        required by multiplicity of ‘x’
    • In an equation for ‘bad’: bad x = seq x ()
